2011-06-16  Ian Beckwith  <ianb@erislabs.net>

	* Fix more make(1) portability problems.
	  Either I am horribly confused or netbsd make
	  (or at least pmake in debian) doesn't support '$<'.
	  Switched to '$?'.

2011-06-15  Ian Beckwith  <ianb@erislabs.net>

	* scitopia, worldwidescience: fixed URLs.
	* Fixed make portability problems.
	  We cannot portably combine single suffix rules (foo.IN->foo)
	  and separated dependencies so we have to explicitly specify
	  all the .IN rules. The solution we used for this until now was
	  specific to GNU make.
	* Removed Makefile.include, no longer used.
	* './configure --enable-opensearch' now only controls
	  installation of the (direct) dependencies for opensearch,
	  not opensearch itself, as opensearch now falls back to
	  using a remote reflector if opensearch-discover(1)
	  and opensearch-genquery(1) aren't found.
	* yandex: fix test.

2011-06-14  Ian Beckwith  <ianb@erislabs.net>

	* musicbrainz, codesearch, rpmsearch: Fixed URLs, options and
	  tests. The sites have all changed significantly which means
	  both new options and no-longer-supported options.
	  Codesearch has gone all ajaxy, so I've implemented the options
	  via the search string, e.g. adding " package:foo".
	  Disabled codesearch.test, as it now needs javascript.
	  Codesearch on both google.com and google.co.uk was acting up,
	  so I've pointed it at google.fr.
	* Removed filesearching elvi, it now requires a 'Referer:' header
	  to work. There is no browser-portable way to specify a
	  'Refer[r]er:' header, plus we should probably take it as a hint.
	* Tweaked debian packaging.
	* Updated NEWS.

2011-06-13  Ian Beckwith  <ianb@erislabs.net>

	* w3link: fixed URLs.

2011-06-10  Ian Beckwith  <ianb@erislabs.net>

	* Fixed ctan.
	  Option -doc has been replaced by -id.
	  Options are no longer mutually exclusive,
	  you can now do (eg) ctan -d -i -n texlive.

2011-06-09  Ian Beckwith  <ianb@erislabs.net>

	* fixed tests: debwiki, ntrs, wayback.
