@@ -115,19 +115,9 @@ endif
 
 
 submit-lsm: surfraw.lsm
-	mail -s add LSM@qqx.org < $<
+	mail -s add LSM@qqx.org < $?
 
 test: all surfraw.conf
 	make -C test test
 
 .PHONY: test
-
-
-#htdocs: index.html
-#	scp index.html surfraw.sourceforge.net:/home/groups/s/su/surfraw/htdocs/index.html
-#README: index.html
-#	st=`stty -g`; stty cols 80; lynx -dump $< >$@ || rm -f $@; stty $$st
-#ftp:
-#	scp $(PACKAGE)-$(VERSION).tar.gz proff@ftp.netbsd.org:/pub/NetBSD/misc/proff/
-#download:
-#	ncftpput -F download.sourceforge.net /incoming $(PACKAGE)-$(VERSION).tar.gz
